--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.along002.testingfinal.LoginAndSignUp.LoginCreateAccountActivity">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ViewSwitcher
             android:id="@+id/viewSwitcher"
             android:layout_width="match_parent"
@@ -25,6 +24,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:src="@drawable/image5"/>
+
             <ImageView
                 android:tint="#2F000000"
                 android:id="@+id/secondImageView"
@@ -37,6 +37,27 @@
 
         <include layout = "@layout/layout_center_viewpager"/>
 
+        <RelativeLayout
+            android:id="@+id/rellayoutMid"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_above="@+id/rellayoutMid"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:alpha=".6"
+                android:padding="55dp"
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/flashcard_launcher"/>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
