--- a/app/src/main/res/layout/activity_manage_set.xml
+++ b/app/src/main/res/layout/activity_manage_set.xml
@@ -7,6 +7,7 @@ android:layout_height="match_parent">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <!-- top toolbar -->
     <RelativeLayout
         android:id="@+id/rellayout1"
@@ -24,7 +25,13 @@ android:layout_height="match_parent">
             android:textColor="@color/white"
             android:textSize="30sp" />
 
-
+        <ImageView
+            android:id="@+id/backArrowView"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_back_arrow"/>
 
     </RelativeLayout>
 
