--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,34 +13,46 @@
         <!-- top toolbar -->
         <RelativeLayout
             android:orientation="horizontal"
-            android:padding="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="10dp"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:id="@+id/rellayout1"
             android:background="@color/top_blue">
 
+            <ImageView
+                android:id="@+id/backArrowView"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_back_arrow"/>
+
             <RelativeLayout
-                android:paddingLeft="3dp"
-                android:paddingRight="5dp"
+                android:paddingHorizontal="5dp"
                 android:background="@drawable/rounded_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true">
 
                 <ImageView
+                    android:layout_centerVertical="true"
                     android:id="@+id/searchImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_search"/>
+                    android:src="@drawable/ic_small_search"/>
 
                 <EditText
+                    android:layout_centerVertical="true"
+                    android:background="@null"
+                    android:paddingRight="10dp"
                     android:paddingLeft="4dp"
                     android:id="@+id/searchEditText"
                     android:singleLine="true"
                     android:layout_toRightOf="@+id/searchImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="Search"/>
+                    android:hint="search"/>
 
             </RelativeLayout>
 
@@ -57,8 +68,8 @@
 
 
             <include layout = "@layout/layout_center_viewpager"/>
-        </RelativeLayout>
 
+        </RelativeLayout>
 
         <!-- bottom navigation -->
         <include layout = "@layout/layout_bottom_navigation_view"/>
