--- a/app/src/main/res/layout/layout_card_view.xml
+++ b/app/src/main/res/layout/layout_card_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp">
 
@@ -16,7 +16,7 @@
             app:cardElevation="4dp"
             android:layout_width="300dp"
             android:layout_marginLeft="30dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true">
 
             <RelativeLayout
@@ -30,21 +30,38 @@
                     android:layout_centerInParent="true">
 
                 </RelativeLayout>
-                <TextView
-                    android:layout_toRightOf="@+id/mid"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Definition"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="60dp"
-                    android:id="@+id/card_Def"/>
-                <TextView
-                    android:id="@+id/card_Term"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Term"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="60dp"/>
+
+                <RelativeLayout
+                    android:padding="5dp"
+                    android:layout_toRightOf="@id/mid"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Definition"
+                        android:layout_centerInParent="true"
+                        android:id="@+id/card_Def"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:padding="5dp"
+                    android:layout_toLeftOf="@id/mid"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/card_Term"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Term"
+                        android:layout_centerInParent="true"/>
+
+                </RelativeLayout>
+
+
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
