--- a/app/src/main/res/layout/layout_center_viewpager.xml
+++ b/app/src/main/res/layout/layout_center_viewpager.xml
@@ -4,13 +4,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.view.ViewPager
+        <com.example.along002.testingfinal.Utils.CustomViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/container">
 
 
-        </android.support.v4.view.ViewPager>
+        </com.example.along002.testingfinal.Utils.CustomViewPager>
 
     </RelativeLayout>
 
